src/objects/Chat_Message__c.object
<CustomObject>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Chat  Messages</relationshipLabel>
        <relationshipName>Chat_Messages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Volleyball_Event__c</fullName>
        <label>Volleyball Event</label>
        <referenceTo>Volleyball_Event__c</referenceTo>
        <relationshipLabel>Chat  Messages</relationshipLabel>
        <relationshipName>Chat_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Chat Message</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat  Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>